templates/yaml/syncthing/sync-service-dl.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-service-transfer
  namespace: nextsync
  labels:
    app: syncthing
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 22000
      targetPort: 22000
  selector:
    app: syncthing
