templates/yaml/syncthing/sync-service-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-service-ingress
  namespace: nextsync
  labels:
    app: syncthing
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8384
    protocol: TCP
  selector:
    app: syncthing
