templates/yaml/syncthing/sync-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-syncthing
  namespace: nextsync
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - sync.cuak.es
    secretName: sync-tls
  rules:
  - host: sync.cuak.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
             name: syncthing-service-ingress
             port:
                number: 80
